# internal/adapter/http/v1/job.go
@@ -1,23 +1,34 @@
 package v1
 
 import (
+	"context"
 	api "github.com/dronesphere/api/http/v1"
+	"github.com/dronesphere/internal/model/entity"
+	"github.com/dronesphere/internal/service"
 	"github.com/gofiber/fiber/v2"
 	"log/slog"
+	"strconv"
+	"sync"
 )
 
 type JobRouter struct {
-	l *slog.Logger
+	svc service.JobSvc
+	l   *slog.Logger
 }
 
-func newJobRouter(handler fiber.Router, l *slog.Logger) {
+func newJobRouter(handler fiber.Router, svc service.JobSvc, l *slog.Logger) {
 	r := &JobRouter{
-		l: l,
+		svc: svc,
+		l:   l,
 	}
 	h := handler.Group("/job")
 	{
 		h.Get("/", r.getJobs)
 		h.Get("/:id", r.getJob)
+		h.Get("/creation/options", r.getCreationOptions)
+		h.Get("/edition/options", r.getEditionOptions)
+		h.Post("/", r.create)
+		h.Put("/", r.update)
 	}
 }
 
@@ -59,48 +70,181 @@ func (r *JobRouter) getJobs(c *fiber.Ctx) error {
 //	@Tags			job
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{object}	v1.Response{data=[]v1.SubJobResult}	"成功"
+//	@Success		200	{object}	v1.Response{data=v1.JobDetailResult}	"成功"
 func (r *JobRouter) getJob(c *fiber.Ctx) error {
-	var items []api.SubJobResult
-	items = append(items, api.SubJobResult{
-		Index: 1,
-		Area: api.JobAreaResult{
-			Name: "区域1",
-			Points: []struct {
-				Lat    float64 `json:"lat"`
-				Lng    float64 `json:"lng"`
-				Marker string  `json:"marker"`
-			}{
-				{Lng: 117.138244, Lat: 36.666409, Marker: "marker1"},
-				{Lng: 117.139102, Lat: 36.666837, Marker: "marker2"},
-				{Lng: 117.13949, Lat: 36.66688, Marker: "marker3"},
-				{Lng: 117.140627, Lat: 36.665554, Marker: "marker4"},
-				{Lng: 117.13944, Lat: 36.66498, Marker: "marker5"},
-			},
-		},
-		Drone: api.JobDrone{
-			SN:    "1581F5FHC246H00DRM66",
-			Name:  "无人机1",
-			Model: "型号1",
-		},
-		//}, api.SubJobResult{
-		//	Index: 2,
-		//	Area: api.JobAreaResult{
-		//		Name: "区域2",
-		//		Points: []struct {
-		//			Lat    float64 `json:"lat"`
-		//			Lng    float64 `json:"lng"`
-		//			Marker string  `json:"marker"`
-		//		}{
-		//			{Lat: 2.1, Lng: 2.1, Marker: "marker1"},
-		//			{Lat: 2.2, Lng: 2.2, Marker: "marker2"},
-		//		},
-		//	},
-		//	Drone: api.JobDrone{
-		//		SN:    "SN2",
-		//		Name:  "无人机2",
-		//		Model: "型号2",
-		//	},
-	})
-	return c.JSON(Success(items))
+	id, err := strconv.Atoi(c.Params("id"))
+	if err != nil {
+		return c.JSON(Fail(InvalidParams))
+	}
+	job, err := r.svc.FetchByID(context.Background(), uint(id))
+	if err != nil {
+		return c.JSON(Fail(InternalError))
+	}
+	var result api.JobDetailResult
+	if err := result.FromJobEntity(job); err != nil {
+		return c.JSON(Fail(InternalError))
+	}
+	return c.JSON(Success(result))
+}
+
+// getCreationOptions  创建任务时依赖的选项数据
+//
+//	@Router			/job/creation/options		[get]
+//	@Summary		创建任务时依赖的选项数据
+//	@Description	创建任务时依赖的选项数据，包括可选的搜索区域列表
+//	@Tags			job
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	v1.Response{data=v1.JobCreationOptionsResult}	"成功"
+func (r *JobRouter) getCreationOptions(c *fiber.Ctx) error {
+	ctx := context.Background()
+	areas, err := r.svc.FetchAvailableAreas(ctx)
+	if err != nil {
+		return c.JSON(Fail(InternalError))
+	}
+	var result api.JobCreationOptionsResult
+	for _, area := range areas {
+		result.Areas = append(result.Areas, struct {
+			ID          uint   `json:"id"`
+			Name        string `json:"name"`
+			Description string `json:"description"`
+		}{
+			ID:          area.ID,
+			Name:        area.Name,
+			Description: area.Description,
+		})
+	}
+	return c.JSON(Success(result))
+}
+
+// getEditionOptions  编辑任务时依赖的选项数据
+//
+//	@Router			/job/edition/options		[get]
+//	@Summary		编辑任务时依赖的选项数据
+//	@Description	编辑任务时依赖的选项数据，包括可选的无人机列表
+//	@Tags			job
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	v1.Response{data=v1.JobEditionOptionsResult}	"成功"
+func (r *JobRouter) getEditionOptions(c *fiber.Ctx) error {
+	// 解析Path 中的 ID
+	id, err := strconv.Atoi(c.Params("id"))
+	ctx := context.Background()
+	wg := sync.WaitGroup{}
+	wg.Add(2)
+	var drones []entity.Drone
+	var j *entity.Job
+	go func() {
+		drones, err = r.svc.FetchAvailableDrones(ctx)
+		if err != nil {
+			return
+		}
+		wg.Done()
+	}()
+	go func() {
+		j, err = r.svc.FetchByID(ctx, uint(id))
+		if err != nil {
+			return
+		}
+		wg.Done()
+	}()
+	wg.Wait()
+	var result api.JobEditionOptionsResult
+	for _, drone := range drones {
+		result.Drones = append(result.Drones, struct {
+			ID               uint   `json:"id"`
+			Callsign         string `json:"callsign"`
+			Description      string `json:"description"`
+			SN               string `json:"sn"`
+			Model            string `json:"model"`
+			RTKAvailable     bool   `json:"rtk_available"`
+			ThermalAvailable bool   `json:"thermal_available"`
+		}{
+			ID:               drone.ID,
+			Callsign:         drone.Callsign,
+			Description:      "",
+			SN:               drone.SN,
+			Model:            drone.ProductType(),
+			RTKAvailable:     drone.IsRTKAvailable(),
+			ThermalAvailable: drone.IsThermalAvailable(),
+		})
+	}
+	result.ID = j.ID
+	result.Name = j.Name
+	result.Description = j.Description
+	points := make([]struct {
+		Lat    float64 `json:"lat"`
+		Lng    float64 `json:"lng"`
+		Marker string  `json:"marker"`
+	}, len(j.Area.Points))
+	for _, p := range j.Area.Points {
+		points = append(points, struct {
+			Lat    float64 `json:"lat"`
+			Lng    float64 `json:"lng"`
+			Marker string  `json:"marker"`
+		}{
+			Lat:    p.Lat,
+			Lng:    p.Lng,
+			Marker: "",
+		})
+	}
+	result.Area = api.JobAreaResult{
+		Name:   j.Area.Name,
+		Points: points,
+	}
+	return c.JSON(Success(result))
+}
+
+// create 创建任务
+//
+//	@Router			/job		[post]
+//	@Summary		创建任务
+//	@Description	创建任务
+//	@Tags			job
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			req	body		v1.JobCreationRequest					true	"创建任务请求"
+//
+//	@Success		200	{object}	v1.Response{data=v1.JobCreationResult}	"成功"
+func (r *JobRouter) create(c *fiber.Ctx) error {
+	var req api.JobCreationRequest
+	if err := c.BodyParser(&req); err != nil {
+		return c.JSON(Fail(InvalidParams))
+	}
+	ctx := context.Background()
+	id, err := r.svc.CreateJob(ctx, req.Name, req.Description, req.AreaID)
+	if err != nil {
+		return c.JSON(Fail(InternalError))
+	}
+	return c.JSON(Success(api.JobCreationResult{ID: id}))
+}
+
+// update 更新任务
+//
+//	@Router			/job		[put]
+//	@Summary		更新任务
+//	@Description	更新任务
+//	@Tags			job
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			req	body		v1.JobEditionRequest					true	"更新任务请求"
+//
+//	@Success		200	{object}	v1.Response{data=v1.JobDetailResult}	"成功"
+func (r *JobRouter) update(c *fiber.Ctx) error {
+	var req api.JobEditionRequest
+	if err := c.BodyParser(&req); err != nil {
+		return c.JSON(Fail(InvalidParams))
+	}
+	ctx := context.Background()
+	j, err := r.svc.ModifyJob(ctx, req.ID, req.Name, req.Description, req.DroneIDs)
+	if err != nil {
+		return c.JSON(Fail(InternalError))
+	}
+	var result api.JobDetailResult
+	if err := result.FromJobEntity(j); err != nil {
+		return c.JSON(Fail(InternalError))
+	}
+	return c.JSON(Success(result))
 }
