# internal/model/entity/job.go
@@ -1,5 +1,7 @@
 package entity
 
+import "github.com/dronesphere/internal/model/po"
+
 type Job struct {
 	ID          uint       `json:"id"`
 	Name        string     `json:"name"`
@@ -7,4 +9,18 @@ type Job struct {
 	Area        SearchArea `json:"area"`
 	Algo        DetectAlgo `json:"algo"`
 	Drones      []Drone    `json:"drones"`
+}
+
+func NewJob(j *po.Job) *Job {
+	var ds []Drone
+	for _, id := range j.DroneIDs {
+		ds = append(ds, Drone{ID: id})
+	}
+	return &Job{
+		ID:          j.ID,
+		Name:        j.Name,
+		Description: j.Description,
+		Area:        SearchArea{ID: j.AreaID},
+		Drones:      ds,
+	}
 }
